src/components/Resources/Resources.css
.resourcesWrapper {
    padding: 18px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 9px;
}

.resourcesCard {
    background-color: var(--text-color-lighter);
    padding: 12px;
    border-radius: 9px;
    font-size: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 45%;
}

.top  {
    width: 95.3%;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 9px;
    background-color: var(--text-color-lighterer);
}

.resourcesContentCards {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 9px;
}

.resourcesCard ul {
    flex-direction: column;
    gap: 2px;
}

.resourcesCard li li {
    list-style-type: circle;
    margin-left: 12px;
    margin-bottom: 3px;
}

.resourcesCard li {
    list-style-type: circle;
    margin-left: 12px;
    color: var(--text-color-darkerer);
}

.resourcesCard a {
    text-decoration: underline;
}

.resourcesCard a:hover,
.resourcesCard Link:hover {
    color: var(--text-color-darkerer);
}

.resourcesCardTitle {
    margin: 0 3px;
}

.siteColCard {
    background-color: var(--text-color-lighter);
    padding: 21px;
    border-radius: 9px;
    font-size: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 92%;
}

.siteColTable * {
    color: var(--text-color-darkerer);
    white-space: pre-line;
    width: 100%;
}

.siteColTable {
    border-collapse: collapse;
}

.siteColTable td {
    border: 1px solid gray;
    padding: 6px;
}

.siteColTable a {
    text-decoration: underline;
}

.resourcesCardHr {
    width: 100%;
    border-top: 1px outset var(--text-color-darkerer);
    margin: 4px 0;
}

